syntax = "proto3";

import "common.proto";

option java_package = "com.graduate.design.proto";
option java_outer_classname="CreateDir";
option go_package = "./pb_gen";


message CreateDirRequest{
    string dirName = 1; // 文件夹名称
    int64 parentId = 2; // 文件夹的父节点
	
    BaseReq baseReq = 255;
}

message CreateDirResponse{

    BaseResp baseResp = 255;
}