syntax = "proto3";
import "common.proto";
option go_package = "./pb_gen";
option java_package = "com.graduate.design.proto";
option java_outer_classname="DeleteShareToken";

message DeleteShareTokenRequest{
	string shareTokenId = 1;
	BaseReq baseReq = 255;
}


message DeleteShareTokenResponse{
	BaseResp baseResp = 255;
}
