syntax = "proto3";

import "common.proto";

option java_package = "com.graduate.design.proto";
option java_outer_classname="SearchFile";
option go_package = "./pb_gen";

// base64
message SearchFileRequest{
    repeated int64 nodeId = 1;

    BaseReq baseReq = 255;
}

message SearchFileResponse{
    repeated Node nodeList = 1; // 搜索结果

    BaseResp baseResp = 255;
}